# 6th-UNN__List-Decoding-with-Aff3ct

./: 0-Install AFF3CT.docx  123.bat  3-Polar.vcxproj  3-Polar.vcxproj.filters  4-RSC.vcxproj  4-RSC.vcxproj.filters  AFF3CT CMD.vcxproj  AFF3CT CMD.vcxproj.filters  BUILD_INSTRUCTIONS.md  CMakeLists.txt  Conv.cpp  Conv_list.cpp  Decoder_FRS1.cpp  Decoder_FRS1.hpp  Decoder_FRS2.cpp  Decoder_FRS2.hpp  Decoder_LDPC_BP_list.hpp  Decoder_LDPC_BP_list.hxx  Encoder_FRS.cpp  Encoder_FRS.hpp  FRS_List_Selector.hpp  LDPC.cpp  LDPC_list_main.cpp  Polar CRC.cpp  Polar.cpp  README.md  RSC.cpp  RSC_list.cpp  gdiplus.h  main.cpp  main_frs1.cpp  main_frs2.cpp  win_guard.h
LDPC_Result_old/: + (N=4095,K=3358,M=737,R= 0.82).txt  LDPC + RS.grf
Polar_Result/: LDPC + RS - Only.grf  LDPC + RS - R.grf  LDPC + RS — Full.grf
Polar_Tests/: Decoder_polar_ASCL_fast_CA_sys.txt  Decoder_polar_SCL_MEM_fast_sys.txt  Decoder_polar_SCL_fast_CA_sys.txt  Decoder_polar_SCL_fast_sys.txt  Decoder_polar_SC_fast_sys.txt  Frozen.txt
RSC_Tests/Viterbi/: 11-13.txt  13-11.txt  13-15.txt  13-17.txt  133-171.txt  15-17.txt  5-7.txt
RSC_Tests/Viterbi_Lists/: 13-15.txt  133-171.txt  5-7.txt
RS_Result_old/: FRS 0.grf  FRS FInal.grf  FRS Theory.grf  Interleaver2.grf
RS_Tests_old/: Package Error.txt  RS_test.txt  m=1.txt  m=2 (2).txt  m=2.txt  m=3 (2).txt  m=4 (2).txt
Result/Graphs/: FRS 1.grf  Interleaver.grf  Packege Error.grf  RS + BPSK2.grf
Result/Tests-txt/: m=1.txt
Tests-txt/: m=3.txt  m=4.txt
conv_RSC_Result/: conv + RSC - full.grf  conv + RSC.grf
conv_Tests/Viterbi/: 13-15.txt  133-171.txt  5-7.txt
conv_Tests/Viterbi_Lists/: 11-13.txt  13-11.txt  13-15.txt  13-17.txt  133-171.txt  15-17.txt  5-7.txt
